# SlippyGL

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: ci.yml
SlippyGL/: CMakeLists.txt  GlBootstrap.cpp  README.md  SlippyGL.sln  SlippyGL.vcxproj  SlippyGL.vcxproj.filters  main.cpp  vcpkg.json
SlippyGL/src/app/: SlippyGL.cpp
SlippyGL/src/cache/: CacheTypes.cpp  CacheTypes.hpp  DiskCache.cpp  DiskCache.hpp
SlippyGL/src/core/: TileMath.hpp  Types.cpp  Types.hpp
SlippyGL/src/decode/: Image.hpp  PngCodec.cpp  PngCodec.hpp
SlippyGL/src/net/: CurlHandle.cpp  CurlHandle.hpp  HttpClient.cpp  HttpClient.hpp  HttpTypes.cpp  HttpTypes.hpp  TileEndpoint.cpp  TileEndpoint.hpp
SlippyGL/src/render/: Camera2D.cpp  Camera2D.hpp  GlBootstrap.cpp  GlBootstrap.hpp  InputHandler.cpp  InputHandler.hpp  QuadRenderer.cpp  QuadRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  TextureManager.cpp  TextureManager.hpp
SlippyGL/src/tile/: TileCache.cpp  TileCache.hpp  TileDownloader.cpp  TileDownloader.hpp  TileGrid.hpp  TileKey.hpp  TileRenderer.cpp  TileRenderer.hpp
SlippyGL/tests/: check.hpp  test_camera.cpp  test_main.cpp  test_tilegrid.cpp  test_tilekey.cpp  test_tilemath.cpp
docs/: 00_QuickReference.md  01_TileSystem_DeepDive.md  02_OpenGL_Graphics_Basics.md  03_CPP_Patterns_Used.md  README.md  camera.md
